vendor/salesforce/force-app/main/default/objects/SMS_Notification__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SMS Notifications</relationshipLabel>
    <relationshipName>SMS_Notifications</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>