vendor/salesforce/force-app/main/default/objects/SMS_Notification__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <description>Twilio error code if failed</description>
    <type>Text</type>
    <length>10</length>
</CustomField>