vendor/salesforce/force-app/main/default/objects/SMS_Notification__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <description>Error details if failed</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>