vendor/salesforce/force-app/main/default/objects/SMS_Notification__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <label>Message Body</label>
    <description>SMS message content</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>