vendor/salesforce/force-app/main/default/objects/SMS_Notification__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <label>Sent Date</label>
    <description>When message sent to Twilio</description>
    <type>DateTime</type>
</CustomField>