vendor/salesforce/force-app/main/default/objects/SMS_Notification__c/fields/To_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Phone_Number__c</fullName>
    <label>To Phone Number</label>
    <description>Recipient phone number</description>
    <type>Phone</type>
</CustomField>