vendor/salesforce/force-app/main/default/objects/SMS_Notification__c/fields/Twilio_Message_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Message_SID__c</fullName>
    <label>Twilio Message SID</label>
    <description>Twilio's unique message identifier for integration idempotency</description>
    <externalId>true</externalId>
    <type>Text</type>
    <length>100</length>
    <unique>true</unique>
</CustomField>